--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
     </div>
     <div class="footer">
         <a href="https://discord.com/users/680037165417234471" target="_blank">
-            <img src="https://img.icons8.com/color/96/discord-logo.png" alt="Discord">
+            <img src="https://i.imgur.com/nGKZY8N.png" alt="Discord">
         </a>
     </div>
 </div>
