--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
         <img src="https://i.imgur.com/rUi7pFb.jpg" class="slides">
         <img src="https://i.imgur.com/y8mWdyS.jpg" class="slides">
         <img src="https://i.imgur.com/c56sXoR.jpg" class="slides">
+        <img src="https://i.imgur.com/19OYZxh.jpg" class="slides">
     </div>
 </div>
 <div class="content">
@@ -63,6 +64,7 @@
         <img src="https://i.imgur.com/rUi7pFb.jpg" alt="Cat 23">
         <img src="https://i.imgur.com/y8mWdyS.jpg" alt="Cat 24">
         <img src="https://i.imgur.com/c56sXoR.jpg" alt="Cat 25">
+        <img src="https://i.imgur.com/19OYZxh.jpg" alt="Cat 25">
     </div>
     <header>
         <h1>Patch</h1>
