--- a/index.html
+++ b/index.html
@@ -34,6 +34,11 @@
         <img src="https://i.imgur.com/y8mWdyS.jpg" class="slides">
         <img src="https://i.imgur.com/c56sXoR.jpg" class="slides">
         <img src="https://i.imgur.com/19OYZxh.jpg" class="slides">
+        <img src="https://i.imgur.com/SjGUxs0.jpg" class="slides">
+        <img src="https://i.imgur.com/fhWArBQ.jpg" class="slides">
+        <img src="https://i.imgur.com/kI0u0C6.jpg" class="slides">
+        <img src="https://i.imgur.com/QUIpqBp.jpg" class="slides">
+        <img src="https://i.imgur.com/OJrbc3k.jpg" class="slides">
     </div>
 </div>
 <div class="content">
@@ -64,7 +69,12 @@
         <img src="https://i.imgur.com/rUi7pFb.jpg" alt="Cat 23">
         <img src="https://i.imgur.com/y8mWdyS.jpg" alt="Cat 24">
         <img src="https://i.imgur.com/c56sXoR.jpg" alt="Cat 25">
-        <img src="https://i.imgur.com/19OYZxh.jpg" alt="Cat 25">
+        <img src="https://i.imgur.com/19OYZxh.jpg" alt="Cat 26">
+        <img src="https://i.imgur.com/SjGUxs0.jpg" alt="Cat 27">
+        <img src="https://i.imgur.com/fhWArBQ.jpg" alt="Cat 28">
+        <img src="https://i.imgur.com/kI0u0C6.jpg" alt="Cat 29">
+        <img src="https://i.imgur.com/QUIpqBp.jpg" alt="Cat 30">
+        <img src="https://i.imgur.com/OJrbc3k.jpg" alt="Cat 31">
     </div>
     <header>
         <h1>Patch</h1>
