36 total cats, didnt add recent ones to slideshow

--- a/index.html
+++ b/index.html
@@ -51,6 +51,8 @@
         <img src="https://i.imgur.com/0G6FpmE.jpg" alt="Cat 3">
         <img src="https://i.imgur.com/2k5j7AI.jpg" alt="Cat 4">
         <img src="https://i.imgur.com/s6s0FCF.jpg" alt="Cat 5">
+        <img src="https://i.imgur.com/QyFRFHc.jpg" alt="Cat 6">
+        <img src="https://i.imgur.com/GlDfmTR.jpg" alt="Cat 7">
         <img src="https://i.imgur.com/NI5eo3c.jpg" alt="Cat 8">
         <img src="https://i.imgur.com/ZL3lcoO.jpg" alt="Cat 9">
         <img src="https://i.imgur.com/7dmM52h.jpg" alt="Cat 10">
@@ -74,7 +76,12 @@
         <img src="https://i.imgur.com/fhWArBQ.jpg" alt="Cat 28">
         <img src="https://i.imgur.com/kI0u0C6.jpg" alt="Cat 29">
         <img src="https://i.imgur.com/QUIpqBp.jpg" alt="Cat 30">
-        <img src="https://i.imgur.com/OJrbc3k.jpg" alt="Cat 31">
+        <img src="https://i.imgur.com/zoSB14d.jpg" alt="Cat 31">
+        <img src="https://i.imgur.com/P8HdG6k.jpg" alt="Cat 32">
+        <img src="https://i.imgur.com/qRGXHqU.jpg" alt="Cat 33">
+        <img src="https://i.imgur.com/S8FsvMA.jpg" alt="Cat 34">
+        <img src="https://i.imgur.com/cjYOh5O.jpg" alt="Cat 35">
+        <img src="https://i.imgur.com/hJQe0tD.jpg" alt="Cat 36">
     </div>
     <header>
         <h1>Patch</h1>
