test for loading improvement

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <h1>SDS1</h1>
     </header>
     <div class="photo-gallery">
-        <img src="https://i.imgur.com/rR2P4CZ.jpg" alt="Cat 1">
+        <img src="https://i.imgur.com/rR2P4CZ.jpg" alt="Cat 1" loading="lazy">
         <img src="https://i.imgur.com/7NPZ41z.jpg" alt="Cat 2">
         <img src="https://i.imgur.com/0G6FpmE.jpg" alt="Cat 3">
         <img src="https://i.imgur.com/2k5j7AI.jpg" alt="Cat 4">
